# ShopGraphHealthService

./: .gitignore  Dockerfile  INTEGRATION_TESTING_GUIDE.md  README.md  docker-compose.yml  fix_ai_tests.py  fix_tests.py  pyproject.toml  run_comprehensive_tests.py  run_integration_tests.py  test_report.json
architecture/: system-design.md
deal_health_service/: __init__.py  ai_processor.py  api.py  config.py  database.py  database_schema.sql  health_calculation_engine.py  message_queue.py  models.py  monitoring.py  security.py  service.py
design/: DESIGN_CODEBASE_ALIGNMENT.md  POLISHING_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  REQUIREMENTS_COMPLIANCE.md
docs/: FILE_STRUCTURE_REORGANIZATION.md
scripts/: run_comprehensive_tests.py  run_integration_tests.py
tests/: __init__.py  test_basic.py  test_health_calculation_engine.py  test_integration.py  test_integration_advanced.py
